# EpiSOA

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  MOCKS.md  README.md  pyproject.toml  pytest.ini  tui.json
configs/: ablation.yaml  ablation_human_gold_v1.yaml  ablation_oracle_evidence.yaml  baselines.yaml  collector.yaml  collector_budget_50.yaml  collector_smoke_10.yaml  collector_tiny.yaml  default.yaml  experiment.yaml  experiment_real_llm.yaml  formal.yaml  formal_ablation.yaml  formal_baselines.yaml  opencode.yaml  opencode_kimi.yaml  paper.yaml  source_detection.yaml
data/: candidate_soa_tuples.jsonl  coverage_aware_evidence_pool.jsonl  event_paths.jsonl  event_queries.jsonl  gold_soa_tuples.jsonl  seeg_edges.jsonl  seeg_nodes.jsonl  verified_soa_tuples.jsonl
docs/: claudecode_project_manual.md  codex_tasks.md  event_instantiation_standard_v1.md  experiment_plan.md  formal_dataset_schema.md  gold_annotation_workflow.md  method_version_log.md  paper_framework.md
examples/: demo_event.json  demo_evidence.jsonl
outputs/: README.md
prompts/: benchmark_chain_system.md  benchmark_chain_user.md  benchmark_evidence_system.md  benchmark_evidence_user.md  benchmark_judge_system.md  benchmark_judge_user.md  benchmark_tuple_system.md  benchmark_tuple_user.md  gold_chain_expansion.md  gold_chain_preannotation.md  gold_tuple_expansion.md  gold_tuple_preannotation.md
results/: ablation_results.csv  main_results.csv
scripts/: __init__.py  _resume_ablation.py  analyze_query_planner_ablation.py  audit_ablation_delta.py  audit_annotation_expansion_delta.py  (+83 more)
(+526 files in other folders)
