[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "episoa"
version = "0.2.0"
description = "EpiSOA v2: reproducible evidence-grounded stakeholder opinion attribution prototype."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "EpiSOA Maintainers" }
]
dependencies = [
  "httpx>=0.27",
  "langgraph>=0.2",
  "networkx>=3.2",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "pytest>=8.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
real-model = [
  "sentence-transformers>=3.0",
]

[project.scripts]
episoa = "episoa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m \"not integration and not slow and not real_model and not browser\""
markers = [
  "unit: fast unit tests",
  "integration: integration tests",
  "slow: slow tests",
  "real_model: tests that load real embedding or LLM models",
  "browser: tests that open browser or use Playwright",
]
